[package]
name = "ico"
version = "0.2.0"
edition = "2021"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "A library for encoding/decoding ICO image files"
repository = "https://github.com/mdsteele/rust-ico"
keywords = ["ico", "icon", "image"]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1"
png = "0.17"

[dev-dependencies]
clap = "2.30"
